--- a/doc/Makefile
+++ b/doc/Makefile
@@ -39,6 +39,7 @@ clean:
 	-rm -rf $(BUILDDIR)/*
 
 html:
+	# ${PYTHONPATH}
 	$(SPHINXBUILD) -t html -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
