--- a/debian/rules
+++ b/debian/rules
@@ -1,43 +1,53 @@
 #!/usr/bin/make -f
 
-include /usr/share/restauth-common/python-restauth.mk
+PYVERS=$(shell pyversions -sv)
+PKGDIR=debian/tmp/
+BINPKGDIR=debian/restauth/
+DOCPKGDIR=debian/restauth-doc/
 
-# override PYVERS, we don't want python3:
-PYVERS=$(shell pyversions -vr 2> /dev/null)
-DH_ARGS:=$(subst --with python3,,${DH_ARGS})
+DH_ARGS=--with python2
 
-build_doc:
-
-override_dh_auto_build: $(PYVERS:%=build-python%)
-	dh_auto_build
-	python setup.py build_doc
-	rm doc/_build/html/_static/jquery.js
-
-override_dh_compress:
-	# exclude .js and .css files
-	dh_compress -X.js -X.css
+%:
+	dh $@ ${DH_ARGS}
 
 override_dh_installchangelogs:
 	dh_installchangelogs ChangeLog
+
+install-python%:
+	dh_testdir
+	python$* setup.py install --force --root debian/restauth --no-compile -O0 --install-layout=deb
+
+build-python%:
+	dh_testdir
+	python$* setup.py build
+
+override_dh_auto_build: ${PYVERS:%=build-python%}
+	dh_testdir
+	python setup.py build_doc
+	rm doc/_build/html/_static/underscore.js
+	rm doc/_build/html/_static/jquery.js
+
+	#dh_auto_build
 
 override_dh_fixperms:
 	dh_fixperms --exclude manage.py
 	find debian/restauth/usr/ -type f -name manage.py | tee | xargs chmod a+rx
 
-#override_dh_auto_install:
 override_dh_auto_install: ${PYVERS:%=install-python%}
-	mkdir -p $(CURDIR)/debian/tmp/usr/share/doc/restauth
-	cp -a doc/_build/html $(CURDIR)/debian/tmp/usr/share/doc/restauth
-
-	dh_auto_install ${DH_ARGS}
-
-	debian/dh_localsettings
+	rm ${BINPKGDIR}usr/share/doc/restauth/COPYING
+	dh_auto_install
+	find debian | grep COPYING
 	
+	#debian/dh_localsettings
+
 	cp bin/restauth-service.py debian/restauth/usr/bin/restauth-service
 	cp bin/restauth-user.py debian/restauth/usr/bin/restauth-user
 	cp bin/restauth-group.py debian/restauth/usr/bin/restauth-group
 	cp bin/restauth-import.py debian/restauth/usr/bin/restauth-import
-	rm debian/tmp/usr/share/doc/restauth/COPYING
+
+override_dh_python2:
+	dh_python2
+	mv ${BINPKGDIR}usr/share/pyshared/RestAuth/localsettings.py ${BINPKGDIR}etc/restauth/
 
 test-python%:
 	python$* setup.py test
@@ -46,5 +56,3 @@ ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
 override_dh_auto_test: ${PYVERS:%=test-python%}
 endif
 	
-%:
-	dh ${DH_ARGS} $@
