--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Homepage: https://restauth.net
 Package: restauth
 Architecture: all
 Section: web
-Depends: python-django (>= 1.3), python (>= 2.6), ${python:Depends}, ${misc:Depends}, python-restauth-common | restauth-common (>= 0.5.1), python-mimeparse, python-argparse
+Depends: python-django (>= 1.3), python (>= 2.6), ${python:Depends}, ${misc:Depends}, python-restauth-common | restauth-common (>= 0.5.1), python-mimeparse, python-argparse, adduser
 XB-Python-Version: 2.6
 Description: service for managing shared authentication, authorization and preferences
  A RestAuth service can manage shared user authentication, authorization and
