--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-PYVERS=$(shell pyversions -srv)
+PYVERS=$(shell pyversions -rv)
 PKGDIR=debian/tmp/
 BINPKGDIR=debian/restauth/
 DOCPKGDIR=debian/restauth-doc/
