--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: misc
 Priority: extra
 Maintainer: Mathias Ertl <apt-repository@fsinf.at>
 Build-Depends: debhelper (>= 8), 
- python-all (>= 2.6.6-2), 
+ python-all (>= 2.6.6-3~), 
  git-core, python-restauth-common | restauth-common (>= 0.5.1), python-sphinx, python-argparse, python-django, python-mimeparse
 Standards-Version: 3.9.2
 X-Python-Version: >= 2.6
