--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==1.3
--e git+http://git.fsinf.at/restauth/restauth-common.git#egg=RestAuthCommon
+-e git+https://git.fsinf.at/restauth/restauth-common.git#egg=RestAuthCommon
 distribute==0.6.10
 mimeparse==0.1.2
 wsgiref==0.1.2
+South==0.7.5
