--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Architecture: all
 Section: web
 Depends: python-django (>= 1.3), python (>= 2.6), ${python:Depends}, ${misc:Depends}, 
  python-restauth-common, python-mimeparse, python-argparse, adduser,
- libjs-jquery, libjs-underscore
+ libjs-jquery, libjs-underscore, python-django-south (>= 0.7)
 Description: service for managing shared authentication, authorization and preferences
  A RestAuth service can manage shared user authentication, authorization and
  preferences. This package is the Django implementation of the specification and
