--- a/debian/control
+++ b/debian/control
@@ -13,9 +13,10 @@ Homepage: https://restauth.net
 Package: restauth
 Architecture: all
 Section: web
-Depends: python-django (>= 1.3), python (>= 2.6), ${python:Depends}, ${misc:Depends}, 
+Depends: python-django (>= 1.3), python (>= 2.6), ${python:Depends},
+ ${misc:Depends}, python-django-south (>= 0.7),
  python-restauth-common, python-mimeparse, python-argparse, adduser,
- libjs-jquery, libjs-underscore, python-django-south (>= 0.7)
+ libjs-jquery, libjs-underscore
 Description: service for managing shared authentication, authorization and preferences
  A RestAuth service can manage shared user authentication, authorization and
  preferences. This package is the Django implementation of the specification and
