move all scripts to RestAuth/bin/

--- a/.gitignore
+++ b/.gitignore
@@ -17,20 +17,5 @@ include/
 src/
 lib/
 local/
-bin/python
-bin/pip*
-bin/easy_install*
-bin/activate*
-bin/django-admin.py
+/bin/
 share/
-bin/ipcluster
-bin/ipcontroller
-bin/ipengine
-bin/iplogger
-bin/iptest
-bin/ipython
-bin/irunner
-bin/pycolor
-bin/sphinx*
-bin/rst*
-bin/pygmentize
