--- a/debian/rules
+++ b/debian/rules
@@ -1,56 +1,58 @@
 #!/usr/bin/make -f
 
 PYVERS=$(shell pyversions -rv)
+PY3VERS=$(shell py3versions -rv)
+
 PKGDIR=debian/tmp/
 BINPKGDIR=debian/restauth/
 DOCPKGDIR=debian/restauth-doc/
 
-DH_ARGS=--with python2
+DH_ARGS=--with python2,python3
 
 %:
 	dh $@ ${DH_ARGS}
 
-override_dh_installchangelogs:
-	dh_installchangelogs ChangeLog
-
-install-python%:
-	dh_testdir
-	python$* setup.py install --force --root ${BINPKGDIR} --no-compile -O0 --install-layout=deb
-
-build-python%:
-	dh_testdir
-	python$* setup.py build
-
-override_dh_auto_build: ${PYVERS:%=build-python%}
-	dh_testdir
-	python setup.py build_doc -t debian
-	rm doc/_build/html/_static/underscore.js
-	rm doc/_build/html/_static/jquery.js
-
-	#dh_auto_build
-
-override_dh_fixperms:
-	dh_fixperms --exclude manage.py
-	find debian/restauth/usr/ -type f -name manage.py | tee | xargs chmod a+rx
-
-override_dh_auto_install: ${PYVERS:%=install-python%}
-	rm -f ${BINPKGDIR}usr/share/doc/restauth/COPYING
-	dh_auto_install
-	
-	rm debian/restauth/usr/bin/*.py
-	cp bin/restauth-service.py debian/restauth/usr/bin/restauth-service
-	cp bin/restauth-user.py debian/restauth/usr/bin/restauth-user
-	cp bin/restauth-group.py debian/restauth/usr/bin/restauth-group
-	cp bin/restauth-import.py debian/restauth/usr/bin/restauth-import
-
-override_dh_python2:
-	dh_python2
-	mv ${BINPKGDIR}usr/share/pyshared/RestAuth/localsettings.py ${BINPKGDIR}etc/restauth/settings.py
-
-test-python%:
-	python$* setup.py test
-
-ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
-override_dh_auto_test: ${PYVERS:%=test-python%}
-endif
+#override_dh_installchangelogs:
+#	dh_installchangelogs ChangeLog
+#
+#install-python%:
+#	dh_testdir
+#	python$* setup.py install --force --root ${BINPKGDIR} --no-compile -O0 --install-layout=deb
+#
+#build-python%:
+#	dh_testdir
+#	python$* setup.py build
+#
+#override_dh_auto_build: ${PYVERS:%=build-python%}
+#	dh_testdir
+#	python setup.py build_doc -t debian
+#	rm doc/_build/html/_static/underscore.js
+#	rm doc/_build/html/_static/jquery.js
+#
+#	#dh_auto_build
+#
+#override_dh_fixperms:
+#	dh_fixperms --exclude manage.py
+#	find debian/restauth/usr/ -type f -name manage.py | tee | xargs chmod a+rx
+#
+#override_dh_auto_install: ${PYVERS:%=install-python%}
+#	rm -f ${BINPKGDIR}usr/share/doc/restauth/COPYING
+#	dh_auto_install
+#	
+#	rm debian/restauth/usr/bin/*.py
+#	cp bin/restauth-service.py debian/restauth/usr/bin/restauth-service
+#	cp bin/restauth-user.py debian/restauth/usr/bin/restauth-user
+#	cp bin/restauth-group.py debian/restauth/usr/bin/restauth-group
+#	cp bin/restauth-import.py debian/restauth/usr/bin/restauth-import
+#
+#override_dh_python2:
+#	dh_python2
+#	mv ${BINPKGDIR}usr/share/pyshared/RestAuth/localsettings.py ${BINPKGDIR}etc/restauth/settings.py
+#
+#test-python%:
+#	python$* setup.py test
+#
+#ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
+#override_dh_auto_test: ${PYVERS:%=test-python%}
+#endif
 	
