--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 mimeparse==0.1.3
-Django==1.5
-RestAuthCommon==0.6.1
+Django==1.5.1
+RestAuthCommon==0.6.2
 PyYAML==3.10
 wsgiref==0.1.2
 South==0.7.6
-Sphinx==1.1.3
+Sphinx==1.2b1
