update location of wsgi script

--- a/doc/files/uwsgi.ini
+++ b/doc/files/uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 chdir=/usr/local/home/restauth/server
-wsgi-file=/usr/local/home/restauth/server/wsgi/restauth
+wsgi-file=/usr/local/home/restauth/server/RestAuth/RestAuth/wsgi.py
 virtualenv=/usr/local/home/restauth/server
 socket=127.0.0.1:3031
 master=True
