--- a/debian/control
+++ b/debian/control
@@ -16,10 +16,10 @@ Homepage: https://restauth.net
 Package: restauth
 Architecture: all
 Section: web
-Depends: python-django (>= 1.4.2), python (>= 2.6.5), ${python:Depends},
- ${misc:Depends}, python-django-south (>= 0.7.5),
+Depends: python-django (>= 1.6), python (>= 2.6.5), ${python:Depends},
+ ${misc:Depends}, python-django-south (>= 0.8),
  python-restauth-common (>= 0.6.2), python-mimeparse, python-argparse, adduser,
- libjs-jquery, libjs-underscore
+ python-passlib (>= 1.6)
 Description: service for managing shared authentication, authorization and preferences
  A RestAuth service can manage shared user authentication, authorization and
  preferences. This package is the Django implementation of the specification and
