--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 8),
  python-all (>= 2.6.6-3~), 
  python-restauth-common (>= 0.6.2), python-sphinx (>= 1.1.3), python-argparse,
  python-django (>= 1.6), python-mimeparse, python-django-south,
- python-setuptools, python3-setuptools
+ python-setuptools, python3-setuptools, python-django-hashers-passlib
 Standards-Version: 3.9.2
 X-Python-Version: >= 2.6
 Vcs-Browser: https://github.com/RestAuth/server
@@ -20,6 +20,7 @@ Depends: python-django (>= 1.6), python (>= 2.6.5), ${python:Depends},
  ${misc:Depends}, python-django-south (>= 0.8),
  python-restauth-common (>= 0.6.2), python-mimeparse, python-argparse, adduser,
  python-passlib (>= 1.6)
+Recommends: python-django-hashers-passlib, python-bcrypt
 Description: service for managing shared authentication, authorization and preferences
  A RestAuth service can manage shared user authentication, authorization and
  preferences. This package is the Django implementation of the specification and
