--- a/debian/rules
+++ b/debian/rules
@@ -53,6 +53,9 @@ override_dh_auto_install: ${PY2VERS:%=install-python%}
 	
 override_dh_python2:
 	dh_python2
+	##########
+	find ${PY2DIR}
+	##########
 	mv ${PY2DIR}usr/share/pyshared/RestAuth/RestAuth/localsettings.py ${PY2DIR}etc/restauth/settings.py
 
 test-python%:
