--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,9 @@ Section: misc
 Priority: extra
 Maintainer: Mathias Ertl <mati@restauth.net>
 Build-Depends: debhelper (>= 8), 
+ python-argparse,
  python-all (>= 2.6.6-3~), 
- python-restauth-common (>= 0.6.2), python-sphinx (>= 1.1.3), python-argparse,
+ python-restauth-common (>= 0.6.2), python-sphinx (>= 1.1.3),
  python-django (>= 1.6), python-mimeparse, python-django-south,
  python-setuptools, python-django-hashers-passlib
 Standards-Version: 3.9.5
