--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include AUTHORS COPYING COPYRIGHT
 include doc/files/uwsgi.ini
+include RestAuth/RestAuth/localsettings.py.example
 recursive-include munin *
