--- a/debian/rules
+++ b/debian/rules
@@ -44,8 +44,11 @@ override_dh_auto_install: ${PY2VERS:%=install-python%}
 	# move uwsgi file to top-level datadir:
 	mkdir ${DATADIR}uwsgi
 	mv ${DATADIR}RestAuth/uwsgi/uwsgi.ini ${DATADIR}uwsgi/
+	mv ${DATADIR}RestAuth/config/localsettings.py.example ${PY2DIR}etc/restauth/settings.py
+	rm -f ${DATADIR}RestAuth/config/__init__.py
 
 	# remove empty directories:
+	rmdir ${DATADIR}RestAuth/config
 	rmdir ${DATADIR}RestAuth/doc
 	rmdir ${DATADIR}RestAuth/munin
 	rmdir ${DATADIR}RestAuth/uwsgi
@@ -53,7 +56,6 @@ override_dh_auto_install: ${PY2VERS:%=install-python%}
 	
 override_dh_python2:
 	dh_python2
-	mv ${PY2DIR}usr/share/pyshared/RestAuth/RestAuth/localsettings.py ${PY2DIR}etc/restauth/settings.py
 
 test-python%:
 	python$* setup.py test
